fix: achive z-index & scroll

--- a/burger.css
+++ b/burger.css
@@ -45,7 +45,7 @@
     position: absolute;
     background-color: #ffffff;
     transition-duration: 0.25s;
-    z-index: 1;
+    z-index: 2;
 }
 .span-before {
     top: 0;
@@ -91,6 +91,7 @@
     background-color: #eceff1;
     box-shadow: 1px 0px 6px rgba(0, 0, 0, 0.2);
     transition-duration: 0.25s;
+    z-index: 1;
 }
 
 .menu__item {
